--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "reactsax",
   "version": "1.0.0",
-  "description": "React UI Library of Vuesax For Reacters",
+  "description": "Vuesax For Reacters",
   "author": "krishna-gujjjar",
-  "license": "GPL",
+  "license": "ISC",
   "repository": "krishna-gujjjar/reactsax",
   "main": "dist/index.js",
   "module": "dist/index.modern.js",
@@ -13,7 +13,8 @@
   },
   "scripts": {
     "build": "microbundle-crl --no-compress --format modern,cjs",
-    "start": "microbundle-crl watch --no-compress --format modern,cjs",
+    "start": "microbundle-crl watch --no-compress --format modern,cjs --css-modules false",
+    "storybook": "start-storybook",
     "prepare": "run-s build",
     "test": "run-s test:unit test:lint test:build",
     "test:build": "run-s build",
@@ -27,7 +28,10 @@
     "react": "^16.0.0"
   },
   "devDependencies": {
-    "microbundle-crl": "^0.13.10",
+    "@storybook/addon-actions": "^5.3.19",
+    "@storybook/addon-knobs": "^5.3.19",
+    "@storybook/preset-create-react-app": "^3.1.3",
+    "@storybook/react": "^5.3.19",
     "babel-eslint": "^10.0.3",
     "cross-env": "^7.0.2",
     "eslint": "^6.8.0",
@@ -41,11 +45,13 @@
     "eslint-plugin-react": "^7.17.0",
     "eslint-plugin-standard": "^4.0.1",
     "gh-pages": "^2.2.0",
+    "microbundle-crl": "^0.13.10",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.0.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "^3.4.1"
+    "react-scripts": "^3.4.1",
+    "sass": "^1.26.10"
   },
   "files": [
     "dist"
