--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "author": "krishna-gujjjar",
   "license": "ISC",
   "repository": "krishna-gujjjar/reactsax",
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com/@krishna-gujjjar"
+  },
   "main": "dist/index.js",
   "module": "dist/index.modern.js",
   "source": "src/index.js",
@@ -12,8 +15,8 @@
     "node": ">=10"
   },
   "scripts": {
-    "build": "microbundle-crl --no-compress --format modern,cjs",
-    "start": "microbundle-crl watch --no-compress --format modern,cjs --css-modules false",
+    "build": "microbundle-crl --compress --format modern,cjs --css-modules false",
+    "start": "microbundle-crl watch --compress --format modern,cjs --css-modules false",
     "storybook": "start-storybook",
     "prepare": "run-s build",
     "test": "run-s test:unit test:lint test:build",
@@ -29,10 +32,14 @@
   },
   "devDependencies": {
     "@storybook/addon-actions": "^5.3.19",
+    "@storybook/addon-docs": "^5.3.19",
     "@storybook/addon-knobs": "^5.3.19",
+    "@storybook/addon-links": "^5.3.19",
+    "@storybook/addon-storysource": "^5.3.19",
     "@storybook/preset-create-react-app": "^3.1.3",
     "@storybook/react": "^5.3.19",
     "babel-eslint": "^10.0.3",
+    "babel-loader": "^8.1.0",
     "cross-env": "^7.0.2",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.7.0",
@@ -50,6 +57,7 @@
     "prettier": "^2.0.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-is": "^16.13.1",
     "react-scripts": "^3.4.1",
     "sass": "^1.26.10"
   },
