--- a/package.json
+++ b/package.json
@@ -1,13 +1,10 @@
 {
-  "name": "reactsax",
-  "version": "1.0.0",
+  "name": "@reactsax/reactsax",
+  "version": "1.0.0-beta.0",
   "description": "Vuesax For Reacters",
   "author": "krishna-gujjjar",
   "license": "ISC",
   "repository": "krishna-gujjjar/reactsax",
-  "publishConfig": {
-    "registry": "https://npm.pkg.github.com/@krishna-gujjjar"
-  },
   "main": "dist/index.js",
   "module": "dist/index.modern.js",
   "source": "src/index.js",
@@ -18,6 +15,7 @@
     "build": "microbundle-crl --compress --format modern,cjs --css-modules false",
     "start": "microbundle-crl watch --compress --format modern,cjs --css-modules false",
     "storybook": "start-storybook",
+    "build-storybook": "build-storybook -s public",
     "prepare": "run-s build",
     "test": "run-s test:unit test:lint test:build",
     "test:build": "run-s build",
