--- a/package.json
+++ b/package.json
@@ -3,6 +3,24 @@
   "version": "1.0.0-beta.0",
   "description": "Vuesax For Reacters",
   "author": "krishna-gujjjar",
+  "keywords": [
+    "react",
+    "vuesax",
+    "ui component",
+    "react component",
+    "react ui library",
+    "components",
+    "component",
+    "javascript",
+    "css",
+    "framework",
+    "ui",
+    "frontend",
+    "responsive",
+    "sass",
+    "design",
+    "theme"
+  ],
   "license": "ISC",
   "repository": "krishna-gujjjar/reactsax",
   "main": "dist/index.js",
